src/assets/scss/components/_components-forms.scss
// =======================================
// form
// =======================================

.c-form {
  accent-color: var(--iad-brand-dark);
}

// =======================================
// form sections
// =======================================

.c-formsection + .c-formsection {
  margin-block-start: 30px;
}

// =======================================
// form fields
// =======================================

.c-formfield {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: first stretch;
  gap: 6px;
}

.c-formfield + .c-formfield {
  margin-block-start: 18px;
}

// =======================================
// label
// =======================================

.c-formfield__label {
  font-weight: 500;
  display: block;
  margin-block-end: 0;
}

.c-formfield__required {
  color: var(--iad-brand-dark);
}

// =======================================
// help
// =======================================

.c-formfield__help {
  font-weight: 400;
  font-size: calc(14 / 16 * 1rem);
  color: var(--iad-gray-300);

  & > *:last-child {
    margin-block-end: 0;
  }
}

// =======================================
// error
// =======================================

.c-formfield__error {
  font-weight: 400;
  font-size: calc(14 / 16 * 1rem);
  color: var(--iad-ui-danger-dark);
  margin-block-end: 0;
}

// =======================================
// inputs
// =======================================

.c-field-text,
.c-field-textarea,
.c-field-select {
  box-sizing: border-box;
  background-color: var(--iad-white);
  border: 1px solid var(--iad-gray-600);
  border-radius: 3px;
  padding: 6px;
  color: var(--iad-gray-100);
  line-height: 1.2;
  display: block;
  width: 100%;
}

.c-field-select {
  position: relative;

  & > select {
    width: 100%;
    background-color: transparent;
    border: none;
  }

  &::after {
    content: "";
    pointer-events: none;
    position: absolute;
    top: 50%;
    right: 10px;
    width: 10px;
    height: 6px;
    background-color: var(--iad-brand-dark);
    translate: 0 -50%;
    clip-path: polygon(100% 0, 0 0, 49% 100%);
  }
}

.c-field-checkbox,
.c-field-radio {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: first baseline;
  gap: 3px;
}

.c-field-checkbox__input,
.c-field-radio__input {
  position: relative;
  top: 1px;
}

.c-field-checkbox__label,
.c-field-radio__label {
  font-weight: 400;
}

.c-field-file {
  font-size: calc(14 / 16 * 1rem);
}

.c-field-file::file-selector-button {
  --btn-border: var(--iad-gray-600);
  --btn-background: var(--iad-white);
  --btn-color: var(--iad-gray-100);
  --btn-radius: 3px;

  display: inline-block;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: var(--btn-border);
  background-color: var(--btn-background);
  color: var(--btn-color);
  padding: 6px 12px;
  line-height: 1;
  border-radius: 3px;
  font-size: calc(14 / 16 * 1rem);

  &:hover,
  &:focus {
    --btn-border: var(--iad-gray-400);
  }
}

